<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.meapy.meapy.RegisterActivity">

    <EditText
        style="@style/registerStyle"
        android:id="@+id/firstNameIdRegister"
        android:layout_marginTop="@dimen/sign_up_margin_top"
        android:hint="@string/first_name_register"/>

    <EditText
        style="@style/registerStyle"
        android:id="@+id/lastNameIdRegister"
        android:hint="@string/last_name_register"/>

    <EditText
        style="@style/registerStyle"
        android:id="@+id/emailIdRegister"
        android:hint="@string/prompt_email" />

    <EditText
        style="@style/registerStyle"
        android:id="@+id/passwordIdRegister"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpBtnIdRegister"
        android:text="@string/sign_up_button"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"/>

</LinearLayout>
