<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="@string/search_posts_onegroup_menu"
        android:icon="@drawable/ic_search_white_24dp"
        android:id="@+id/searchingPosts"
        app:showAsAction="always"
        ></item>

    <item
        android:title="@string/title_message_group_menu"
        android:icon="@drawable/ic_chat_white_24dp"
        android:id="@+id/accedToDiscussionOneGroup"
        app:showAsAction="always"
        ></item>

    <item
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/title_my_account_menu"
        android:visible="true"
        app:showAsAction="always"
        android:id="@+id/myAccountId">
    </item>
</menu>