<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.meapy.meapy.LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:src="@drawable/logo_app1"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="45dp"
            android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/emailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFFFFF"
                    android:layout_marginBottom="10dp"
                    android:padding="4dp"/>

                <EditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:backgroundTint="@color/white"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:visibility="visible"
                    tools:text=""
                    android:padding="4dp"
                    />



            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/background"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/facebook"
                android:text="@string/sign_in_fb"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/gmail"
                android:text="@string/sign_in_gm"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/register"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/background"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
