<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context="project.meapy.meapy.CreateGroupActivity">
    <!--<TextView-->
        <!--android:id="@+id/headTextSend"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Create a group"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:textSize="30dp"/>-->

    <RelativeLayout
        android:id="@+id/fieldNameGroup"
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/iconTitleCreateGroup"
            style="@style/iconNavigationLayout"
            android:background="@drawable/ic_title_black_24dp" />

        <EditText
            android:id="@+id/nameCreateGroup"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iconTitleCreateGroup"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:hint="@string/group_name_hint"
            android:textSize="15sp" />

        <!--divider-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/nameCreateGroup"
            android:layout_below="@+id/nameCreateGroup"
            android:background="@drawable/divider"
            />

        <!--<ImageView-->
        <!--android:id="@+id/correct_name_group"-->
        <!--android:backgroundTint="@android:color/white"-->
        <!--style="@style/correctFieldStyle"/>-->

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutImgGroup"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingLeft="20dp">

        <ImageView
            android:id="@+id/iconImageCreateGroup"
            style="@style/iconNavigationLayout"
            android:background="@drawable/ic_insert_photo_black_24dp"/>

        <TextView
            android:id="@+id/imageCreateGroup"
            android:layout_toRightOf="@+id/iconImageCreateGroup"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:hint="@string/image_name_hint" />

        <ImageButton
            android:id="@+id/insertCreateGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorButton"
            android:background="@android:drawable/ic_menu_add" />


        <!--divider-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/imageCreateGroup"
            android:layout_below="@+id/imageCreateGroup"
            android:background="@drawable/divider"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingLeft="20dp">

        <ImageView
            android:id="@+id/iconTagCreateGroup"
            android:layout_centerVertical="true"
            style="@style/iconNavigationLayout"
            android:background="@drawable/ic_short_text_black_24dp"/>

        <EditText
            android:id="@+id/summuayCreateGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iconTagCreateGroup"
            android:background="@android:color/transparent"
            android:hint="@string/tag_name_hint" />

        <!--divider-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/summuayCreateGroup"
            android:layout_below="@+id/summuayCreateGroup"
            android:background="@drawable/divider"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingLeft="20dp">

        <ImageView
            android:id="@+id/iconPersonAddCreateGroup"
            style="@style/iconNavigationLayout"
            android:background="@drawable/ic_person_add_white_24dp"/>

        <TextView
            android:id="@+id/addUserTextcreateGroup"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/iconPersonAddCreateGroup"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:textSize="15sp"
            android:hint="@string/add_user_create_group"/>

        <ImageButton
            android:id="@+id/addUserCreateGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButton"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@android:drawable/ic_menu_add"/>


        <!--divider-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/addUserTextcreateGroup"
            android:layout_below="@+id/addUserTextcreateGroup"
            android:background="@drawable/divider"
            />
    </RelativeLayout>


   <GridView
       android:id="@+id/membersGridCreateGroup"
       android:layout_width="wrap_content"
       android:layout_height="200dp"
       android:numColumns="2"
       android:layout_centerHorizontal="true"
       android:layout_above="@+id/createNewGroupId"
       android:layout_below="@+id/layoutAddUser">
    </GridView>

   <Button
        android:id="@+id/createNewGroupId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_group_button"
        android:textColor="@android:color/white"
        android:background="@color/colorButton"/>

</LinearLayout>
